[package]
name = "vm"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]

[dependencies]
env_logger = "*"

x86 = { path = "arches/x86", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
kvm = { path = "vmm/kvm", optional = true }

[features]
default = [
	"x86",
	"kvm",
]

[workspace]
