[package]
name = "hax"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
publish = false

[dependencies]
vm-common = { path = "../vm-common" }
x86 = { path = "../arches/x86" }

error-chain = { version = "*", default-features = false }
log = "*"
bitflags = { git = "https://github.com/tamird/bitflags", branch = "associated-constants" }
